Details
-
Bug
-
Status: Closed (View Workflow)
-
Blocker
-
Resolution: Fixed
-
10.6(EOL), 10.11, 11.4, 11.8
-
Not for Release Notes
Description
Audit plugin has a simple parser to figure out what kind of SQL statement it is. This is fragile, slow (compared to having no parser) and completely unnecessary, because the server has already parsed the statement and the plugin can easily find the SQLCOM code for the current statement.
Let's simplify that and remove the parser.
Attachments
Issue Links
- causes
-
MDEV-38604 Assertion `thd->utime_after_query >= thd->utime_after_lock' failed in query_response_time_audit_notify on 2nd execution of SP with query cache
-
- Closed
-
- links to