MDEV-38375 do MYSQL_AUDIT_GENERAL_STATUS on ps execute too

just like slow logging, MYSQL_AUDIT_GENERAL_STATUS
should be done inside Prepared_statement::execute()